# ascii_obfuscation

./: .gitignore  CMakeLists.txt  Doxyfile.conf  README.md  ascii_obfuscation_doc.conf  main.c  string_obfuscator.cbp  string_obfuscator.depend
code_examples/: ascii_256_alphabet.c  ascii_256_alphabet_recursive.c  ascii_256_alphabet_recursive_tidy.c  ascii_256_alphabet_tidy.c
documentation/: ascii_obfuscation.doxygen.cnfg  generdoc.bat
documentation/blog/: coding_style.md  readme_template.md  small_talk.md
documentation/html/: deprecated__functions_8c.html  deprecated__functions_8c.js  deprecated__functions_8c_source.html  deprecated__functions_8h.html  deprecated__functions_8h.js  deprecated__functions_8h_source.html  dir_08d237fc27d4ecd563f71c5d52f2fecc.html  files.html  files.js  functions_8c.html  functions_8c.js  functions_8c_source.html  functions_8h.html  functions_8h.js  functions_8h_source.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  index.html  invert__ascii_8c.html  invert__ascii_8c.js  invert__ascii_8c_source.html  main_8c.html  main_8c.js  main_8c_source.html  main_8h.html  main_8h.js  main_8h_source.html  navtreedata.js  navtreeindex0.js  pages.html  todo.html  unit__tests_8c.html  unit__tests_8c.js  unit__tests_8c_source.html  utils_8c.html  (+2 more)
project/: README.md  string_obfuscator.cbp  string_obfuscator.depend
sources/: ascii_256_alphabet_tidy.c  deprecated_functions.c  deprecated_functions.h  functions.c  functions.h  invert_ascii.c  main.c  main.h  unit_tests.c  utils.c
(+35 files in other folders)
